--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,3 +20,11 @@ footer {
     color: var(--body-color);
     font-size: var(--h3-font-size);
 }
+
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 576px) {
+    .title__footer {
+        font-size: var(--small-font-size);
+    }
+}
