--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -21,24 +21,34 @@
 }
 
 .wrapper__programs {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     place-items: center;
 }
 
 .wrapper-icon {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 0.5rem;
+    border: 2px solid var(--title-color);
+    padding: 2rem 1rem;
+    height: 220px;
 }
 
 .title-icon {
+    font-size: var(--h3-font-size);
     text-align: center;
 }
 
+.subtitle-icon {
+    color: var(--title-color-dark);
+    text-align: center;
+    font-size: var(--small-font-size);
+}
+
 .icon-programs {
-    font-size: var(--big-font-size);
+    font-size: var(--semiBig-font-size);
     color: var(--accent-color);
 }
 
@@ -120,6 +130,10 @@
 }
 /* For medium devices */
 @media screen and (max-width: 768px) {
+    .programs {
+        top: 2rem;
+    }
+
     .programs__content {
         justify-content: center;
         align-items: center;
@@ -143,6 +157,14 @@
 
     .title-icon {
         font-size: var(--normal-font-size);
+    }
+
+    .subtitle-icon {
+        font-size: var(--tiny-font-size);
+    }
+
+    .wrapper__programs {
+        grid-template-columns: repeat(2, 1fr);
     }
 
 }
